removed the text-decoration for the anchor in the 'p' element tag in login.html

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <input class="user_credentials" type="text" name="user_credentials" placeholder="Enter email or phonenumber">
                     <input class="password" type="password" name="password" placeholder="Enter password">
                     <input type="submit" name="submit" value="Login" class="button-input">
-                    <p class="form-p">Do you have an account?<span> Signup</span> or <span>Forgot Password</span></p>
+                    <pre><p class="form-p">Do you have an account?,<a href="##">sign up</a>    <a href="Forgot Password">Forgot password</a></p></pre>
                 </form>
             </div>
         </div>
