Programmed the layout of the home.html header section

--- a/home.html
+++ b/home.html
@@ -7,11 +7,28 @@
     <meta name="description" content="Home page of the Angella's shoop app">
     <link rel="icon" href="./media/image/logo.png" type="image/png">
     <style type="text/css">
-        @import url();
+        @import url("/css/home.css");
     </style>
     <title>Home</title>
 </head>
 <body>
+    <!-- Header section of Angella's shop application website. -->
+    <header class="header-bar">
+        <div class="div-log">
+            <img src="./media/image/logo.png" alt="campany's logo." class="logo-home">
+        </div>
+        <div class="search-section">
+            <input type="text" value="search" placeholder="search" class="search-input">
+            <img src="./media/image/logo.png" alt="The search button for the homepage of Angella's shop application." width="25px" height="25px">
+        </div>
+        <div class="nav-header">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Cart</a></li>
+                <li><a href="">Account</a></li>
+            </ul>
+        </div>
+    </header>
     
 </body>
 </html>
