--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <input class="user_credentials" type="text" name="user_credentials" placeholder="Enter email or phonenumber">
                     <input class="password" type="password" name="password" placeholder="Enter password">
                     <input type="submit" name="submit" value="Login" class="button-input">
-                    <pre><p class="form-p">Do you have an account?,<a href="##">sign up</a>    <a href="Forgot Password">Forgot password</a></p></pre>
+                    <pre><p class="form-p">Do you have an account?,<a href="##">sign up</a>    <a href="home.html">Forgot password</a></p></pre>
                 </form>
             </div>
         </div>
