Finished styling the header bar of the home page of Angella's website

--- a/home.html
+++ b/home.html
@@ -14,19 +14,27 @@
 <body>
     <!-- Header section of Angella's shop application website. -->
     <header class="header-bar">
-        <div class="div-log">
+        <!-- <div class="div-log"> -->
             <img src="./media/image/logo.png" alt="campany's logo." class="logo-home">
-        </div>
+        <!-- </div> -->
         <div class="search-section">
             <input type="text" value="search" placeholder="search" class="search-input">
-            <img src="./media/image/logo.png" alt="The search button for the homepage of Angella's shop application." width="25px" height="25px">
+            <div>
+                <img id="search-icon" src="./media/image/logo.png" alt="The search" width="20px" height="20px">
+            </div>
         </div>
         <div class="nav-header">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Cart</a></li>
-                <li><a href="">Account</a></li>
-            </ul>
+            <!-- <ul> -->
+                <!-- <li> -->
+                    <a href="">Home</a>
+                <!-- </li> -->
+                <!-- <li> -->
+                    <a href="">Cart</a>
+                <!-- </li>
+                <li> -->
+                    <a href="">Account</a>
+                <!-- </li> -->
+            <!-- </ul> -->
         </div>
     </header>
     
