Added the class of the search icon section

--- a/home.html
+++ b/home.html
@@ -19,22 +19,14 @@
         <!-- </div> -->
         <div class="search-section">
             <input type="text" value="search" placeholder="search" class="search-input">
-            <div>
+            <div class="search-icon-div">
                 <img id="search-icon" src="./media/image/logo.png" alt="The search" width="20px" height="20px">
             </div>
         </div>
         <div class="nav-header">
-            <!-- <ul> -->
-                <!-- <li> -->
-                    <a href="">Home</a>
-                <!-- </li> -->
-                <!-- <li> -->
-                    <a href="">Cart</a>
-                <!-- </li>
-                <li> -->
-                    <a href="">Account</a>
-                <!-- </li> -->
-            <!-- </ul> -->
+            <a href="">Home</a>
+            <a href="">Cart</a>
+            <a href="">Account</a>
         </div>
     </header>
     
