Designed the header of the cart page of Angella's shop website using both html and css

--- a/cart.html
+++ b/cart.html
@@ -6,11 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the cart page of Angella's web application.">
     <style type="text/css">
-        @import url();
+        @import url("./css/home.css");
     </style>
     <title>cart page</title>
 </head>
 <body>
-    
+    <!-- Header section of Angella's shop application website. -->
+    <header class="header-bar">
+        <img src="./media/image/logo.png" alt="campany's logo." class="logo-home">
+        <div class="search-section">
+            <input type="text" value="search" placeholder="search" class="search-input">
+            <div class="search-icon-div">
+                <img id="search-icon" src="./media/image/logo.png" alt="The search" width="20px" height="20px">
+            </div>
+        </div>
+        <div class="nav-header">
+            <a href="">Home</a>
+            <a href="">Cart</a>
+            <a href="">Account</a>
+        </div>
+    </header>
 </body>
 </html>
