Designed the cart.html page for Angella's shop website, both the html file and css file that style the cart.html file have been written

--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This is the cart page of Angella's web application.">
     <style type="text/css">
         @import url("./css/home.css");
+        @import url("./css/cart.css");
     </style>
     <title>cart page</title>
 </head>
@@ -26,5 +27,41 @@
             <a href="">Account</a>
         </div>
     </header>
+
+    <div class="container">
+        <div class="item-to-buy">
+            <div class="image-description">
+                <img src="./media/image/laptop.png" alt="" class="cart-image">
+                <div class="description">
+                    <h4>Macbook Pro 2014</h4>
+                    <p>500GB HD, 8GB RAM</p>
+                    <p>7th Gen</p>
+                    <p style="margin-top:50px">235,000 UGX</p>
+                </div>
+            </div>
+            <div class="remove-add-section">
+                <div class="incremental-svg-file"></div>
+                <div class="decremental-svg-file"></div>
+                <button class="rem-button">Remove</button>
+            </div>
+        </div>
+
+        <div class="item-to-buy">
+            <div class="image-description">
+                <img src="./media/image/phone.png" alt="" class="cart-image">
+                <div class="description">
+                    <h4>Samsung Galaxy</h4>
+                    <p>8GB RAM</p>
+                    <p> </p>
+                    <p style="margin-top:50px">335,000 UGX</p>
+                </div>
+            </div>
+            <div class="remove-add-section">
+                <div class="incremental-svg-file"></div>
+                <div class="decremental-svg-file"></div>
+                <button class="rem-button">Remove</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
