Connected the links in the header section to where they connect to

--- a/cart.html
+++ b/cart.html
@@ -22,9 +22,9 @@
             </div>
         </div>
         <div class="nav-header">
-            <a href="">Home</a>
-            <a href="">Cart</a>
-            <a href="">Account</a>
+            <a href="home.html">Home</a>
+            <a href="cart.html">Cart</a>
+            <a href="account.html">Account</a>
         </div>
     </header>
 
