--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                     <img src="./media/image/laptop.png" alt="" class="item-image">
                     <h4>Laptop</h4>
                     <p>235,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -70,7 +70,7 @@
                     <img src="./media/image/watch.png" alt="" class="item-image">
                     <h4>Watch</h4>
                     <p>135,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                </div>
             </div>
 
@@ -79,7 +79,7 @@
                     <img src="./media/image/phone.png" alt="" class="item-image">
                     <h4>Samsung Galaxy</h4>
                     <p>335,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -89,7 +89,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Electric Kettle</h4>
                     <p>5,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Headphones</h4>
                     <p>15,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                     <img src="./media/image/laptop.png" alt="" class="item-image">
                     <h4>Laptop</h4>
                     <p>235,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -122,7 +122,7 @@
                     <img src="./media/image/watch.png" alt="" class="item-image">
                     <h4>Watch</h4>
                     <p>135,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                </div>
             </div>
 
@@ -131,7 +131,7 @@
                     <img src="./media/image/phone.png" alt="" class="item-image">
                     <h4>Samsung Galaxy</h4>
                     <p>335,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Electric Kettle</h4>
                     <p>5,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Headphones</h4>
                     <p>15,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     <img src="./media/image/laptop.png" alt="" class="item-image">
                     <h4>Laptop</h4>
                     <p>235,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
                     <img src="./media/image/watch.png" alt="" class="item-image">
                     <h4>Watch</h4>
                     <p>135,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                </div>
             </div>
 
@@ -183,7 +183,7 @@
                     <img src="./media/image/phone.png" alt="" class="item-image">
                     <h4>Samsung Galaxy</h4>
                     <p>335,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -193,7 +193,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Electric Kettle</h4>
                     <p>5,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -202,7 +202,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Headphones</h4>
                     <p>15,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
                     <img src="./media/image/laptop.png" alt="" class="item-image">
                     <h4>Laptop</h4>
                     <p>235,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -226,7 +226,7 @@
                     <img src="./media/image/watch.png" alt="" class="item-image">
                     <h4>Watch</h4>
                     <p>135,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                </div>
             </div>
 
@@ -235,7 +235,7 @@
                     <img src="./media/image/phone.png" alt="" class="item-image">
                     <h4>Samsung Galaxy</h4>
                     <p>335,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -245,7 +245,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Electric Kettle</h4>
                     <p>5,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
 
@@ -254,7 +254,7 @@
                     <img src="" alt="" class="item-image">
                     <h4>Headphones</h4>
                     <p>15,000 ugx</p>
-                    <button>Add to cart</button>
+                    <button class="add-to-cart-button">Add to cart</button>
                 </div>
             </div>
         </div>
