Added the 'see more>>' functionality in the 'see-more-div' in home.html file

--- a/home.html
+++ b/home.html
@@ -54,6 +54,7 @@
         <!-- Electronics category -->
         <div class="see-more-div">
             <p>Electronics</p>
+            <p>See more>></p>
         </div>
         <div class="items-section">
             <div class="item-div">
@@ -106,6 +107,7 @@
         <!-- Clothing section  -->
         <div class="see-more-div">
             <p>Clothing</p>
+            <p>See more>></p>
         </div>
         <div class="items-section">
             <!-- Dress  -->
@@ -158,6 +160,7 @@
         <!-- Foot wear section  -->
         <div class="see-more-div">
             <p>Foot wear</p>
+            <p>See more>></p>
         </div>
         <div class="items-section">
             <!-- Leather shoes -->
@@ -210,6 +213,7 @@
         <!-- Bakery section  -->
         <div class="see-more-div">
             <p>Bakery</p>
+            <p>See more>></p>
         </div>
         <div class="items-section">
             <!-- Bread  -->
