I have added clothing images to home.html file

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                     <button class="big-sale-button">Add to cart</button>
                 </div>
                 <!-- Image of the big sale  -->
-                <img src="" alt="The big sale image of the shop">
+                <img src="./media/image/watch_1.png" alt="The big sale image of the shop" class="big-sale-image">
             </div>
         </div>
 
@@ -113,7 +113,7 @@
             <!-- Dress  -->
             <div class="item-div">
                 <div>
-                    <img src="./media/image/laptop.png" alt="" class="item-image">
+                    <img src="./media/image/dress.png" alt="" class="item-image">
                     <h4>Red Floral Dress</h4>
                     <p>35,000 ugx</p>
                     <button class="add-to-cart-button">Add to cart</button>
@@ -122,7 +122,7 @@
             <!-- Jean short  -->
             <div class="item-div">
                <div>
-                    <img src="./media/image/watch.png" alt="" class="item-image">
+                    <img src="./media/image/short.png" alt="" class="item-image">
                     <h4>Jean Shorts</h4>
                     <p>65,000 ugx</p>
                     <button class="add-to-cart-button">Add to cart</button>
@@ -131,7 +131,7 @@
             <!-- Trouser women  -->
             <div class="item-div">
                 <div>
-                    <img src="./media/image/phone.png" alt="" class="item-image">
+                    <img src="./media/image/pants.png" alt="" class="item-image">
                     <h4>Pink Trouser women</h4>
                     <p>35,000 ugx</p>
                     <button class="add-to-cart-button">Add to cart</button>
@@ -140,7 +140,7 @@
             <!-- Suit  -->
             <div class="item-div">
                 <div>
-                    <img src="" alt="" class="item-image">
+                    <img src="./media/image/suit.png" alt="" class="item-image">
                     <h4>Suit</h4>
                     <p>225,000 ugx</p>
                     <button class="add-to-cart-button">Add to cart</button>
@@ -149,7 +149,7 @@
             <!-- T-shirt  -->
             <div class="item-div">
                 <div>
-                    <img src="" alt="" class="item-image">
+                    <img src="./media/image/t-shirts.png" alt="" class="item-image">
                     <h4>T-Shirt</h4>
                     <p>55,000 ugx</p>
                     <button class="add-to-cart-button">Add to cart</button>
@@ -263,7 +263,7 @@
             </div>
         </div>
     <!-- This is the footer of the home page.  -->
-    <footer class="footer ">
+    <footer class="footer">
         <div>
             <h3>Angella's Shop</h3>
             <p>Kampala, Uganda</p>
