Finalised with the navigation bar styling and items alignment

--- a/home.html
+++ b/home.html
@@ -8,14 +8,15 @@
     <link rel="icon" href="./media/image/logo.png" type="image/png">
     <style type="text/css">
         @import url("/css/home.css");
-        @import url("css/media.css");
     </style>
     <title>Home</title>
 </head>
 <body>
     <!-- Header section of Angella's shop application website. -->
     <header class="header-bar">
-        <img src="./media/image/logo.png" alt="campany's logo." class="logo-home">
+        <div class="div-logo">
+            <img src="./media/image/logo.png" alt="campany's logo." class="logo-home">
+        </div>
         <div class="search-section">
             <input type="text" value="search" placeholder="search" class="search-input">
             <!-- <div class="search-icon-div"> -->
