Linked the two javascript files using the 'script' tag and set there type='module'

--- a/Angella's shop app/home.html
+++ b/Angella's shop app/home.html
@@ -300,6 +300,7 @@
         </div>
     </footer>
 
-    <script src="./js/inventory.js"></script>
+    <script type="module" src="./js/inventory.js"></script>
+    <script type="module" src="./js/home.js"></script>
 </body>
 </html>
