--- a/Angella's shop app/cart.html
+++ b/Angella's shop app/cart.html
@@ -23,7 +23,7 @@
         </div>
         <div class="nav-header">
             <a href="home.html">Home</a>
-            <a href="cart.html">Cart</a>
+            <a href="cart.html">Cart<sup class="cart-counter">0</sup></a>
             <a href="account.html">Account</a>
         </div>
     </header>
