Removed all the items that I was adding statically, I want to add them dynamically

--- a/Angella's shop app/home.html
+++ b/Angella's shop app/home.html
@@ -33,239 +33,10 @@
         </div>
     </header>
 
+    <!-- This is the section where I have to put my content dynamically -->
     <div class="container">
-        <div class="categories">
-            <div class="categories-div">
-                <h1>Categories</h1>
-                <p>Electronics</p>
-                <p>Clothings</p>
-                <p>Foot wear</p>
-                <p>Bakery</p>
-            </div>
-            <div class="big-sale-div">
-                <div>
-                    <h1>big sale 50%</h1>
-                    <h3>watch</h3>
-                    <p style="font-weight:bold;">New smart watch</p>
-                    <h1><span style="font-size:large; font-weight: bolder;">UGX</span> 19,999</h1>
-                    <button class="big-sale-button">Add to cart</button>
-                </div>
-                <!-- Image of the big sale  -->
-                <img src="./media/image/watch_1.png" alt="The big sale image of the shop" class="big-sale-image">
-            </div>
-        </div>
-
-        <!-- Electronics category -->
-        <div class="see-more-div">
-            <p>Electronics</p>
-            <p>See more>></p>
-        </div>
-        <div class="items-section">
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/laptop.png" alt="" class="item-image">
-                    <h4>Laptop</h4>
-                    <p>235,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="item-div">
-               <div>
-                    <img src="./media/image/watch.png" alt="" class="item-image">
-                    <h4>Watch</h4>
-                    <p>135,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-               </div>
-            </div>
-
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/phone.png" alt="" class="item-image">
-                    <h4>Samsung Galaxy</h4>
-                    <p>335,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-
-            
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Electric Kettle.png" alt="" class="item-image">
-                    <h4>Electric Kettle</h4>
-                    <p>5,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/headphones.png" alt="" class="item-image">
-                    <h4>Headphones</h4>
-                    <p>15,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Clothing section  -->
-        <div class="see-more-div">
-            <p>Clothing</p>
-            <p>See more>></p>
-        </div>
-        <div class="items-section">
-            <!-- Dress  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/dress.png" alt="" class="item-image">
-                    <h4>Red Floral Dress</h4>
-                    <p>35,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Jean short  -->
-            <div class="item-div">
-               <div>
-                    <img src="./media/image/short.png" alt="" class="item-image">
-                    <h4>Jean Shorts</h4>
-                    <p>65,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-               </div>
-            </div>
-            <!-- Trouser women  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/pants.png" alt="" class="item-image">
-                    <h4>Pink Trouser women</h4>
-                    <p>35,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Suit  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/suit.png" alt="" class="item-image">
-                    <h4>Suit</h4>
-                    <p>225,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- T-shirt  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/t-shirts.png" alt="" class="item-image">
-                    <h4>T-Shirt</h4>
-                    <p>55,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Foot wear section  -->
-        <div class="see-more-div">
-            <p>Foot wear</p>
-            <p>See more>></p>
-        </div>
-        <div class="items-section">
-            <!-- Leather shoes -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Leather shoes.png" alt="" class="item-image">
-                    <h4>Leather Shoes</h4>
-                    <p>95,250 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- women's shoes  -->
-            <div class="item-div">
-               <div>
-                    <img src="./media/image/Women's shoes.png" alt="" class="item-image">
-                    <h4>Women's shoes</h4>
-                    <p>95,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-               </div>
-            </div>
-            <!-- Sneakers  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Sneakers.png" alt="" class="item-image">
-                    <h4>Sneakers</h4>
-                    <p>125,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Nick shoes  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/nick-shoes.png" alt="" class="item-image">
-                    <h4>Nick Shoes</h4>
-                    <p>5,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Shoes  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/shoes.png" alt="" class="item-image">
-                    <h4>Shoes</h4>
-                    <p>35,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Bakery section  -->
-        <div class="see-more-div">
-            <p>Bakery</p>
-            <p>See more>></p>
-        </div>
-        <div class="items-section">
-            <!-- Bread  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Bread.png" alt="" class="item-image">
-                    <h4>Bread</h4>
-                    <p>5,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Cakes  -->
-            <div class="item-div">
-               <div>
-                    <img src="./media/image/Cakes.png" alt="" class="item-image">
-                    <h4>Cakes</h4>
-                    <p>65,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-               </div>
-            </div>
-            <!-- Cookies  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Cookies.png" alt="" class="item-image">
-                    <h4>Cookies</h4>
-                    <p>1,200 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Hot Loaf  -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Hot Loaf.png" alt="" class="item-image">
-                    <h4>Hot Loaf</h4>
-                    <p>35,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-            <!-- Supa Loaf -->
-            <div class="item-div">
-                <div>
-                    <img src="./media/image/Supa Loaf.png" alt="" class="item-image">
-                    <h4>Supa Loaf</h4>
-                    <p>55,000 ugx</p>
-                    <button class="add-to-cart-button">Add to cart</button>
-                </div>
-            </div>
-        </div>
+        
+    </div>
     <!-- This is the footer of the home page.  -->
     <footer class="footer">
         <div>
