Added the big sale category statically

--- a/Angella's shop app/home.html
+++ b/Angella's shop app/home.html
@@ -35,7 +35,26 @@
 
     <!-- This is the section where I have to put my content dynamically -->
     <div class="container">
-        
+        <div class="categories">
+            <div class="categories-div">
+                <h1>Categories</h1>
+                <p>Electronics</p>
+                <p>Clothings</p>
+                <p>Foot wear</p>
+                <p>Bakery</p>
+            </div>
+            <div class="big-sale-div">
+                <div>
+                    <h1>big sale 50%</h1>
+                    <h3>watch</h3>
+                    <p style="font-weight:bold;">New smart watch</p>
+                    <h1><span style="font-size:large; font-weight: bolder;">UGX</span> 19,999</h1>
+                    <button class="big-sale-button">Add to cart</button>
+                </div>
+                <!-- Image of the big sale  -->
+                <img src="./media/image/watch_1.png" alt="The big sale image of the shop" class="big-sale-image">
+            </div>
+        </div>
     </div>
     <!-- This is the footer of the home page.  -->
     <footer class="footer">
