--- a/Angella's shop app/cart.html
+++ b/Angella's shop app/cart.html
@@ -57,8 +57,12 @@
                 </div>
             </div>
             <div class="remove-add-section">
-                <div class="incremental-svg-file"></div>
-                <div class="decremental-svg-file"></div>
+                <div class="incremental-svg-file">
+                    <img src="./media/image/chevon-left.svg" alt="decrease">
+                </div>
+                <div class="decremental-svg-file">
+                    <img src="./media/image/chevon-right.svg" alt="increase">
+                </div>
                 <button class="rem-button">Remove</button>
             </div>
         </div>
