--- a/Angella's shop app/cart.html
+++ b/Angella's shop app/cart.html
@@ -40,12 +40,12 @@
                 </div>
             </div>
             <div class="remove-add-section">
-                <div class="incremental-svg-file">
+                <button class="incremental-svg-file" id="decrement">
                     <img src="./media/image/chevon-left.svg" alt="">
-                </div>
-                <div class="decremental-svg-file">
+                </button>
+                <button class="decremental-svg-file" id="increment">
                     <img src="./media/image/chevon-right.svg" alt="">
-                </div>
+                </button>
                 <button class="rem-button">Remove</button>
             </div>
         </div>
@@ -61,12 +61,12 @@
                 </div>
             </div>
             <div class="remove-add-section">
-                <div class="incremental-svg-file">
+                <button class="incremental-svg-file" id="decrement">
                     <img src="./media/image/chevon-left.svg" alt="decrease">
-                </div>
-                <div class="decremental-svg-file">
+                </button>
+                <button class="decremental-svg-file" id="increment">
                     <img src="./media/image/chevon-right.svg" alt="increase">
-                </div>
+                </button>
                 <button class="rem-button">Remove</button>
             </div>
         </div>
