added the images to the index.html file

--- a/progressBar/index.html
+++ b/progressBar/index.html
@@ -7,6 +7,14 @@
     <title>Progress Bar</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="./media/images/one_circle.svg" alt="">
+        <hr>
+        <img src="./media/images/two_circle.svg" alt="">
+        <hr>
+        <img src="./media/images/three_circle.svg" alt="">
+        <hr>
+        <img src="./media/images/four_circle.svg" alt="">
+    </div>
 </body>
 </html>
