added classes to all the image tags in the index.html file

--- a/progressBar/index.html
+++ b/progressBar/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <img src="./media/images/one_circle.svg" alt="">
+        <img class="one" src="./media/images/one_circle.svg" alt="">
         <hr>
-        <img src="./media/images/two_circle.svg" alt="">
+        <img class="two" src="./media/images/two_circle.svg" alt="">
         <hr>
-        <img src="./media/images/three_circle.svg" alt="">
+        <img class="three" src="./media/images/three_circle.svg" alt="">
         <hr>
-        <img src="./media/images/four_circle.svg" alt="">
+        <img class="four" src="./media/images/four_circle.svg" alt="">
     </div>
 </body>
 </html>
