added classes to all hr tags in the index.html file

--- a/progressBar/index.html
+++ b/progressBar/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <img class="one" src="./media/images/one_circle.svg" alt="">
-        <hr>
+        <hr class="first">
         <img class="two" src="./media/images/two_circle.svg" alt="">
-        <hr>
+        <hr class="second">
         <img class="three" src="./media/images/three_circle.svg" alt="">
-        <hr>
+        <hr class="third">
         <img class="four" src="./media/images/four_circle.svg" alt="">
     </div>
 </body>
