linked the js file to the index.html file

--- a/progressBar/index.html
+++ b/progressBar/index.html
@@ -18,5 +18,7 @@
         <hr class="third">
         <img class="four" src="./media/images/four_circle.svg" alt="">
     </div>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
