added an id to the button

--- a/clock/index.html
+++ b/clock/index.html
@@ -13,9 +13,9 @@
         <!-- <h1>0:00</h1> -->
         <h1>00:00:00</h1>
         <div class="buttons">
-            <button>start</button>
-            <button>pause</button>
-            <button>stop</button>
+            <button id="start">start</button>
+            <button id="pause">pause</button>
+            <button id="stop">stop</button>
         </div>
     </div>
 </body>
