--- a/clock/window.html
+++ b/clock/window.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Window</title>
+    <script>
+        window.onload = ()=>{
+            const heading = document.createElement("p")
+            const headingText = document.createTextNode("I will be a boss one day.")
+            heading.appendChild(headingText)
+            document.body.appendChild(heading)
+        }
+    </script>
 </head>
 <body>
     
