changed the 'p' tag to 'h1' tag

--- a/clock/window.html
+++ b/clock/window.html
@@ -7,7 +7,7 @@
     <title>Window</title>
     <script>
         window.onload = ()=>{
-            const heading = document.createElement("p")
+            const heading = document.createElement("h1")
             const headingText = document.createTextNode("I will be a boss one day.")
             heading.appendChild(headingText)
             document.body.appendChild(heading)
