--- a/clock/index.html
+++ b/clock/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <!-- <h1>0:00</h1> -->
-        <h1>00:00:00</h1>
+        <h1><span>00</span>:<span>00</span>:<span>00</span></h1>
         <div class="buttons">
             <button id="start">start</button>
             <button id="pause">pause</button>
