--- a/clock/index.html
+++ b/clock/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="container">
         <!-- <h1>0:00</h1> -->
-        <h1><span id="hour"><span id="hl">0</span><span id="hr">0</span></span>:<span id="minute"><span id="ml">0</span><span id="mr">0</span></span>:<span id="second"><span id="sl">0</span><span id="sr">0</span></span>:<span id="microseonds"><span id="ml">0</span><span id="mr">0</span></span></h1>
+        <h1>
+            <span id="hour"><span id="hl">0</span><span id="hr">0</span></span>
+            :<span id="minute"><span id="ml">0</span><span id="mr">0</span></span>
+            :<span id="second"><span id="sl">0</span><span id="sr">0</span></span>
+            :<span id="microseonds">0</span>
+        </h1>
         <div class="buttons">
             <button id="start">start</button>
             <button id="pause">pause</button>
