I have changed the id name of the microseconds area

--- a/clock/index.html
+++ b/clock/index.html
@@ -15,7 +15,7 @@
             <span id="hour"><span id="hl">0</span><span id="hr">0</span></span>
             :<span id="minute"><span id="ml">0</span><span id="mr">0</span></span>
             :<span id="second"><span id="sl">0</span><span id="sr">0</span></span>
-            :<span id="microseonds">0</span>
+            :<span id="microseconds">0</span>
         </h1>
         <div class="buttons">
             <button id="start">start</button>
