I have included the script link to the index.js file

--- a/clock/index.html
+++ b/clock/index.html
@@ -23,5 +23,7 @@
             <button id="stop">stop</button>
         </div>
     </div>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
