--- a/scoreboard/index.html
+++ b/scoreboard/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoreboard</title>
+
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <div class="scoreboard" id="app">
+        <div class="scoreboard__name">Player One</div>
+        <div class="scoreboard__name">Player Two</div>
+        <div class="scoreboard__score">0</div>
+        <div class="scoreboard__score">0</div>
+    </div>
 </body>
 </html>
