I have added the scoreboard control buttons

--- a/scoreboard/index.html
+++ b/scoreboard/index.html
@@ -10,10 +10,19 @@
 </head>
 <body>
     <div class="scoreboard" id="app">
-        <div class="scoreboard__name">Player One</div>
-        <div class="scoreboard__name">Player Two</div>
+        <div class="scoreboard__name scoreboard__name-one">Player One</div>
+        <div class="scoreboard__name scoreboard__name-two">Player Two</div>
         <div class="scoreboard__score">0</div>
         <div class="scoreboard__score">0</div>
+
+        <div class="scoreboard__controls">
+            <button class="scoreboard__control-button">-</button>
+            <button class="scoreboard__control-button">+</button>
+        </div>
+        <div class="scoreboard__controls">
+            <button class="scoreboard__control-button">-</button>
+            <button class="scoreboard__control-button">+</button>
+        </div>
     </div>
 </body>
 </html>
