--- a/scoreboard/index.html
+++ b/scoreboard/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="scoreboard" id="app">
+
+    <div class="scoreboard">
         <div class="scoreboard__name scoreboard__name-one">Player One</div>
         <div class="scoreboard__name scoreboard__name-two">Player Two</div>
         <div class="scoreboard__score">0</div>
