I have linked the main.js file to the index.html and also created the div that will contain everything in the index.html file

--- a/scoreboard/index.html
+++ b/scoreboard/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div id="app">
 
+    </div>
     <div class="scoreboard">
         <div class="scoreboard__name scoreboard__name-one">Player One</div>
         <div class="scoreboard__name scoreboard__name-two">Player Two</div>
@@ -25,5 +27,7 @@
             <button class="scoreboard__control-button">+</button>
         </div>
     </div>
+
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
