--- a/scoreboard/index.html
+++ b/scoreboard/index.html
@@ -12,7 +12,7 @@
     <div id="app">
 
     </div>
-    <div class="scoreboard">
+    <!-- <div class="scoreboard">
         <div class="scoreboard__name scoreboard__name-one">Player One</div>
         <div class="scoreboard__name scoreboard__name-two">Player Two</div>
         <div class="scoreboard__score">0</div>
@@ -26,7 +26,7 @@
             <button class="scoreboard__control-button">-</button>
             <button class="scoreboard__control-button">+</button>
         </div>
-    </div>
+    </div> -->
 
     <script src="./main.js" type="module"></script>
 </body>
